package com.group_three.food_ordering.enums;

public enum OrderStatus {

    PENDING,
    APPROVED,
    IN_PROGRESS,
    COMPLETED,
    SERVED,
    CANCELLED
}
