package com.group_three.food_ordering.enums;

public enum PaymentMethod {
    CASH,
    CREDIT_CARD,
    DEBIT_CARD,
    MOBILE_PAYMENT,
    PAYPAL,
    BANK_TRANSFER,
    CRYPTOCURRENCY,
    GIFT_CARD,
    OTHER
}
