package com.group_three.food_ordering.enums;

public enum TableStatus {
    AVAILABLE,
    OCCUPIED,
    COMPLETE,
    CLOSED,
    OUT_OF_SERVICE,
}
