package com.group_three.food_ordering.models;

import com.group_three.food_ordering.enums.TableStatus;
import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.annotations.SQLDelete;
import org.hibernate.type.SqlTypes;

import java.util.ArrayList;
import java.util.List;
import java.util.UUID;

@Entity(name = "tables")
@SQLDelete(sql = "UPDATE orders SET deleted = true WHERE id = ?")
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Table {

    @Id
    @JdbcTypeCode(SqlTypes.VARCHAR)
    @Column(name = "id", length = 36)
    private UUID id;

    @Column(nullable = false)
    private Integer number;

    @Column(nullable = false)
    private Integer capacity;

    @Enumerated(EnumType.STRING)
    private TableStatus status;

    @OneToMany(mappedBy = "table", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<TableSession> tableSessions = new ArrayList<>();

    @ManyToOne
    @JoinColumn(name = "food_venue_id")
    private FoodVenue foodVenue;

    @Column
    private Boolean deleted;

    @PrePersist
    public void onCreate() {
        if (deleted == null) deleted = false;
        if (this.id == null) this.id = UUID.randomUUID();
        if (this.status == null) this.status = TableStatus.AVAILABLE;
    }
}