@startuml


' === Main entities ===

class User {
    - name : String
    - lastName : String
    - email : String
    - password : String
    - birthDate : LocalDate
    - phone: String
    - createdAt : LocalDate
    - removedAt : LocalDate
    - role: RoleType
}

class Client {
    - nickname : String
}

class Employee {
    - position : String
}

class FoodVenue {
    - name : String
    - address : String
    - email : String
    - phone : String
    - imageUrl : String
}

class Table {
    - number : String
    - capacity : Integer
    - status : TableStatus
}

class TableSession {
    - startTime : Instant
    - endTime : Instant
}



class Product {
    - name : String
    - description : String
    - price : BigDecimal
    - imageUrl : String
    - available : Boolean
    - stock : Integer
}

class Category {
    - name : String
}

class Tag {
    - label : String
}

class Order {
    - orderNumber : String
    - status : OrderStatus
    - totalPrice : BigDecimal
    - createdAt : Instant
    - updatedAt : Instant
    - specialRequirements : String
}

class OrderDetail {
    -quantity : Integer
    -price : BigDecimal
    -specialInstructions : String
}

class Payment {
    - amount : BigDecimal
    - paymentMethod : PaymentMethod
    - status : PaymentStatus
    - paidAt : Instant
}


' === Enums ===
package enums {
    enum TableStatus {
        AVAILABLE
        OCCUPIED
        RESERVED
        OUT_OF_SERVICE
    }

    enum RoleType {
        ROLE_GUEST
        ROLE_CLIENT
        ROLE_STAFF
        ROLE_MANAGER
        ROLE_ADMIN
        ROLE_ROOT
    }

    enum OrderStatus {
        PENDING
        APPROVED
        IN_PROGRESS
        COMPLETED
        SERVED
        CANCELLED
    }

    enum PaymentStatus {
        PENDING
        COMPLETED
        FAILED
    }

    enum PaymentMethod {
      CASH
      CREDIT_CARD
      DEBIT_CARD
      MOBILE_PAYMENT
    }
}

' === Relations ===
FoodVenue "1" <-up-> "1..*" Table : has
FoodVenue "1" <-up-> "0..*" TableSession : has
FoodVenue "1" <-left-> "1..*" Product : has
FoodVenue "1" <-left- "0..*" Order : has
FoodVenue "1" <-right-> "1..*" Employee : has
Product "1..*" -down-> "0..*" Category : has
Product "1" -right-> "0..*" Tag : has
TableSession "1" <-left-> "0..*" Order : has
TableSession "1" <-up-> "1..*" Client : has
TableSession "1" --> "1" Client : hostClient
TableSession "1" -down-> "1" Table : has
Payment "1" <-right-> "1..*" Order : has
Client "1" <-left-> "0..* " Order : has
Order "1" -down-> "1..*" OrderDetail : has
OrderDetail "0..*" -down-> "1" Product : has
Client "1" -down-> "0..1" User : has
Employee "1" -up-> "1" User : has
Category "0..1" <--> "0..*" Category : subcategories




TableStatus -right[hidden]- PaymentMethod
TableStatus -left[hidden]- OrderStatus
PaymentMethod -right[hidden]- RoleType
RoleType -right[hidden]- PaymentStatus
OrderStatus -up[hidden]- Category

@enduml